<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Booksmart</string>
    <string name="app_name_title">booksmart</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_listings">Listings</string>
    <string name="title_resources">Resources</string>
    <string name="title_profile">Profile</string>

    <!-- Toolbar Text -->
    <string name="listings_toolbar_title">Marketplace</string>
    <string name="profile_toolbar_title">Profile</string>
    <string name="resources_toolbar_title">Resources</string>

    <!-- Listing Post Form -->
    <string name="post_listing_title">Post a Listing</string>
    <string name="post_listing_instructions">Sell Textbooks, Clickers, Lab Manuals, or any other course materials you don’t need anymore. </string>
    <string name="upload_image_text">Upload an Image</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description (Author, edition, brand, etc...) </string>
    <string name="price_hint">Price</string>
    <string name="course_hint">Course (Ex. CHEM1402)</string>

    <!-- Sign up Form -->
    <string name="signup_title">Join booksmart</string>
    <string name="signup_name">Name</string>
    <string name="signup_school">College/University</string>
    <string name="signup_email">E-mail</string>
    <string name="signup_username">Username</string>
    <string name="signup_password">Password</string>
    <string name="upload_profile_image">Upload a profile photo</string>

    <string name="welcome_back">Welcome back!</string>

    <!-- Profile Fragment -->
    <string name="profile_listings_title">My Listings</string>
    <string name="profile_favorites_title">Saved Items</string>
    <string name="profile_resource_title">My Resources</string>
    <string name="profile_saved_listings_title">My Saved Listings</string>
    <string name="profile_saved_resources_title">My Saved Resources</string>
    <string name="profile_no_listings">You do not have any active listings!</string>
    <string name="profile_no_favorites">You have not saved any listings!</string>
    <string name="profile_no_resources">You have not uploaded any resources!</string>

    <!-- Button Text -->
    <string name="select_photo">Select Photo</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="post_listing_button">Post Listing</string>
    <string name="message_seller">Ask Seller</string>
    <string name="google_books_link">Get Book</string>
    <string name="check_pdf_link">Check for Free PDF</string>
    <string name="edit_listing">Edit</string>
    <string name="remove_listing">Remove</string>
    <string name="sold_listing">Yes! It\'s sold</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="logout">Log Out</string>
    <string name="create_account">Create Account</string>

    <!-- Placeholder Strings -->
    <string name="long_text_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vulputate ultrices neque, vel ultricies orci auctor eget. Phasellus ac dignissim enim, eu pulvinar urna. Etiam vel tempus sapien. Quisque efficitur hendrerit aliquet. Sed dictum consectetur pharetra. Proin bibendum egestas risus, vitae cursus ipsum elementum non.</string>
    <string name="course_name_placeholder">CHEM1402</string>
    <string name="title_placeholder">Biology Textbook</string>
    <string name="username_placeholder">laura.castro.test</string>
    <string name="price_placeholder">$10</string>
    <string name="user_name_placeholder">John Doe</string>
    <string name="school_name_placeholder">Facebook University</string>
    <string name="title_chat">Messages</string>
    <string name="no_messages_text">You don\'t have any messages!</string>
    <string name="cancel">Cancel</string>
    <string name="remove_listing_confirm">Remove Listing?</string>
    <string name="mark_as_sold_confirm">Mark Listing as Sold?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_preview_placeholder">You: Hey is this still available?</string>
    <string name="timestamp_placeholder">Jul 21</string>
    <string name="message_hint">Type a message...</string>
    <string name="message_placeholder">This is a message I am sending</string>
    <string name="save_listing">Save</string>
    <string name="settings_title_text">Settings</string>
    <string name="edit_personal_details">Edit personal details</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="regional">Regional</string>
    <string name="language">Language</string>
    <string name="books_a_million">Books-A-Million</string>
    <string name="barnes_amp_noble"><![CDATA[Barnes & Noble]]></string>
    <string name="amazon">Amazon</string>
    <string name="google_books">Google Books</string>
</resources>