<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_listings">

    <fragment
        android:id="@+id/navigation_listings"
        android:name="com.example.booksmart.ui.listings.ListingsFragment"
        android:label="@string/title_listings"
        tools:layout="@layout/fragment_listings" />

    <!--<fragment
        android:id="@+id/navigation_resources"
        android:name="com.example.booksmart.ui.resources.ResourcesFragment"
        android:label="@string/title_resources"
        tools:layout="@layout/fragment_resources" />-->

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.booksmart.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_conversation"
        android:name="com.example.booksmart.ui.chat.ConversationsFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_conversations" />
</navigation>