<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:paddingBottom="10dp"
    android:paddingHorizontal="10dp"
    android:paddingTop="0dp">

    <ImageView
        android:id="@+id/ivOtherUserProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:layout_centerVertical="true"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/ivListingPreviewImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="10dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvOtherUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/ivListingPreviewImage"
        android:layout_toEndOf="@+id/ivOtherUserProfileImage"
        android:textColor="@color/black"
        android:fontFamily="@font/work_sans_medium"
        android:textSize="@dimen/font_size_medium"
        tools:text="@string/user_name_placeholder" />

    <TextView
        android:id="@+id/tvLastMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvOtherUserName"
        android:layout_toStartOf="@+id/ivListingPreviewImage"
        android:layout_toEndOf="@+id/ivOtherUserProfileImage"
        android:ellipsize="end"
        android:fontFamily="@font/work_sans"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_small"
        tools:text="@string/message_preview_placeholder" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLastMessage"
        android:layout_toStartOf="@+id/ivListingPreviewImage"
        android:layout_toEndOf="@+id/ivOtherUserProfileImage"
        android:fontFamily="@font/work_sans"
        android:textSize="@dimen/font_size_small"
        tools:text="@string/timestamp_placeholder" />

    <ImageView
        android:id="@+id/ivUnreadIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="3dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_unread" />
</RelativeLayout>