<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.welcome.LoginFragment">

    <RelativeLayout
        android:id="@+id/login_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:id="@+id/ivLoginBack"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_centerVertical="true"
            android:src="?attr/actionModeCloseDrawable"
            app:tint="@color/orange_500" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/login_toolbar_layout"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingBottom="20dp">

        <include
            android:id="@+id/login_fragment_logo"
            layout="@layout/booksmart_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/etLoginUsername"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/work_sans_semibold"
            android:gravity="center"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_heading" />

        <EditText
            android:id="@+id/etLoginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/etLoginPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/work_sans"
            android:hint="@string/signup_username"
            android:importantForAutofill="no"
            android:inputType="text|textNoSuggestions"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/font_size_medium" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/work_sans"
            android:hint="@string/signup_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/font_size_medium" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etLoginPassword"
            android:layout_alignParentStart="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/orange_500"
            android:fontFamily="@font/work_sans"
            android:text="@string/signin"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_large"
            app:cornerRadius="@dimen/button_corner_radius" />

        <ProgressBar
            android:id="@+id/pbLoadingLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etLoginPassword"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/btnSignIn"
            android:visibility="invisible"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/orange_500"/>

    </RelativeLayout>

</RelativeLayout>